--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,7 @@ pico_enable_stdio_usb(comedouro_iot 0)
 
 # Add the standard library to the build
 target_link_libraries(comedouro_iot
-        pico_stdlib)
+        pico_stdlib  pico_cyw43_arch_lwip_threadsafe_background hardware_adc pico_lwip_http)
 
 # Add the standard include files to the build
 target_include_directories(comedouro_iot PRIVATE
